# mfa-playground

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml  utils.py
.github/: dependabot.yml
.github/workflows/: checks.yml  docker-build-and-deploy.yml
templates/: 404.html  _.html  email-otp.html  eotp.html  home.html  mfa.html  signin.html  signup.html  totp.html
