[project]
name = "mfa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiosmtplib>=4.0.0",
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.115.8",
    "jinja2>=3.1.5",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.0",
    "ruff>=0.9.7",
    "tortoise-orm>=0.16.17",
]
